gl51-master/src/test/deca/context/invalid/testObject_rule2_9.deca
//Description
// Un parametre de method ne peut pas etre void

class A {
    void method(void param) {}
}
//passed
